y.output
Terminals which are not used

   COMMENT


Grammar

    0 $accept: list $end

    1 list: list number
    2     | list tag
    3     | list mov
    4     | number
    5     | tag
    6     | mov

    7 number: NUM '\n'

    8 mov: MOV '\n'

    9 tag: TAG '\n'


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 7 8 9
error (256)
TAG (258) 9
MOV (259) 8
NUM (260) 7
COMMENT (261)


Nonterminals, with rules where they appear

$accept (8)
    on left: 0
list (9)
    on left: 1 2 3 4 5 6, on right: 0 1 2 3
number (10)
    on left: 7, on right: 1 4
mov (11)
    on left: 8, on right: 3 6
tag (12)
    on left: 9, on right: 2 5


state 0

    0 $accept: . list $end

    TAG  shift, and go to state 1
    MOV  shift, and go to state 2
    NUM  shift, and go to state 3

    list    go to state 4
    number  go to state 5
    mov     go to state 6
    tag     go to state 7


state 1

    9 tag: TAG . '\n'

    '\n'  shift, and go to state 8


state 2

    8 mov: MOV . '\n'

    '\n'  shift, and go to state 9


state 3

    7 number: NUM . '\n'

    '\n'  shift, and go to state 10


state 4

    0 $accept: list . $end
    1 list: list . number
    2     | list . tag
    3     | list . mov

    $end  shift, and go to state 11
    TAG   shift, and go to state 1
    MOV   shift, and go to state 2
    NUM   shift, and go to state 3

    number  go to state 12
    mov     go to state 13
    tag     go to state 14


state 5

    4 list: number .

    $default  reduce using rule 4 (list)


state 6

    6 list: mov .

    $default  reduce using rule 6 (list)


state 7

    5 list: tag .

    $default  reduce using rule 5 (list)


state 8

    9 tag: TAG '\n' .

    $default  reduce using rule 9 (tag)


state 9

    8 mov: MOV '\n' .

    $default  reduce using rule 8 (mov)


state 10

    7 number: NUM '\n' .

    $default  reduce using rule 7 (number)


state 11

    0 $accept: list $end .

    $default  accept


state 12

    1 list: list number .

    $default  reduce using rule 1 (list)


state 13

    3 list: list mov .

    $default  reduce using rule 3 (list)


state 14

    2 list: list tag .

    $default  reduce using rule 2 (list)
